Added frame loop